# dball

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  api  api.toml  check.sh  database  dball.js  dball_bg.wasm  deny.toml  diesel.toml  docker-compose.yml  fill_template.ps1  flake.nix  index.html  rust-project.skill  xxdoc
.cargo/: config.toml
.github/workflows/: build.yml  pages.yml  test.yml  typos.yml
benches/: dup_bench.rs
crates/dball-client/: Cargo.toml
crates/dball-client/examples/: api.rs  crawl_tickets.rs  database.rs  this_year_tickets.rs  update_spot.rs  update_tickets.rs
crates/dball-client/src/: api.rs  daemon.rs  datastore.rs  db.rs  ipc.rs  lib.rs  request.rs  server.rs  service.rs
crates/dball-client/src/api/: config.rs  fix.rs  provider.rs  rest.rs  websocket.rs
crates/dball-client/src/api/provider/: mxnzp.rs
crates/dball-client/src/api/rest/: mxnzp.rs
crates/dball-client/src/api/rest/mxnzp/: common.rs  latest_ticket.rs  specified_ticket.rs
crates/dball-client/src/daemon/: ipc_server.rs  lock.rs  service.rs
crates/dball-client/src/datastore/: models.rs  schema.rs
crates/dball-client/src/db/: spot.rs  ticket_log.rs  tickets.rs  update.rs
crates/dball-client/src/ipc/: client.rs  codec.rs  envelope.rs  protocol.rs
crates/dball-client/src/ipc/client/: client.rs  reconnect.rs  subscriber.rs
crates/dball-client/src/models/: mod.rs  schema.rs  spot.rs  ticket_log.rs  tickets.rs
crates/dball-client/src/request/: factory.rs  latest_ticket.rs  mxnzp.rs  provider.rs  specified_ticket.rs
crates/dball-client/src/request/mxnzp/: common.rs  latest_ticket.rs  specified_ticket.rs
crates/dball-client/src/server/: handlers.rs  mod.rs  router.rs  rpc.rs  types.rs
crates/dball-client/src/service/: spot.rs  ticket.rs  ticket_log.rs
crates/dball-client/tests/: api.rs  test_datetime.rs
crates/dball-combora/: Cargo.toml
crates/dball-combora/examples/: cosine.rs  main.rs  main2.rs
crates/dball-combora/src/: checker.rs  dball.rs  generator.rs  lib.rs  main.rs
crates/dball-combora/src/dball/: bits.rs  check.rs  def.rs  generate.rs
crates/dball-combora/src/generator/: bluemorn.rs
migrations/2025-07-24-053714_create_tickets/: up.sql
migrations/2025-07-24-065858_alter_tickets_time_to_datetime/: down.sql  up.sql
migrations/2025-07-24-072657_add_created_modified_time_to_tickets/: down.sql  up.sql
migrations/2025-07-25-052929_create_spot/: down.sql  up.sql
migrations/2025-08-02-061752_add_deprecated_to_spot/: down.sql  up.sql
migrations/2025-08-03-095451_insert_test_spot_data/: down.sql  up.sql
src/: app.rs  bench.rs  lib.rs  main.rs
src/app/: check.rs  dball.rs  eframe.rs  generate.rs  terminal.rs
src/app/terminal/: component.rs  components.rs  ipc.rs  layout.rs
src/app/terminal/component/: dball.rs  spot.rs
src/app/terminal/layout/: logs.rs  middle.rs  nextgen.rs  open_status.rs  spot_history.rs  spot_histroy.rs
