[package]
name = "dball-client"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.4"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
log = "0.4"
ansi_term = "0.12"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

[dev-dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
