[package]
name = "dball-client"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daemon"
path = "bin/daemon.rs"

[dependencies]
dball-combora = { path = "../dball-combora" }
anyhow = "1"
ctor = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
console = "0.16.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
strum = "0.27"
strum_macros = "0.27"
uuid = { version = "1.0", features = ["v4", "serde"] }
flate2 = "1.0"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
