[package]
name = "dball-combora"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rand = "0.8"
anyhow = "1"
console = "0.16.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
